# pake-kem

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: demo.rs
src/: errors.rs  hash.rs  lib.rs  messages.rs  pake.rs  protocol.rs
src/pake/: cpace.rs  mod.rs
src/pake/tests/: cpace_test_vectors.rs  mod.rs  test_serialization.rs
src/tests/: mod.rs  test_protocol.rs  test_serialization.rs
