[package]
name = "pake-kem"
description = "An implementation of a password-authenticated key exchange (PAKE) based from a key encapsulation mechanism (KEM)."
version = "0.1.0-pre.2"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "4", features = ["rand_core"] }
elliptic-curve = { version = "0.14.0-pre.6", features = ["hash2curve"] }
hkdf = "0.13.0-pre.4"
rand_core = { version = "0.6", features = ["getrandom"] }
ml-kem = "0.2"
kem = "0.3.0-pre.0"
sha2 = "0.11.0-pre.4"
thiserror = "1"

[dev-dependencies]
hex = "0.4"
serde_json = "1"
base64 = "0.22"
