[package]
name = "pake-kem"
description = "An implementation of a password-authenticated key exchange (PAKE) based from a key encapsulation mechanism (KEM)."
version = "0.1.0-pre.6"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/facebook/pake-kem"
categories = ["cryptography"]
keywords = ["cryptography"]

[dependencies]
curve25519-dalek = { version = "=5.0.0-pre.6", features = ["rand_core"] }
hkdf = "=0.13.0-rc.5"
rand_core = { version = "0.10", default-features = false }
ml-kem = "0.3.0-rc.0"
sha2 = "0.11.0-pre.4"
thiserror = "1"
getrandom = { version = "0.4", features = ["sys_rng"] }

[dev-dependencies]
hex = "0.4"
serde_json = "1"
base64 = "0.22"

[lib]
crate-type = ["cdylib", "rlib"]
